--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+
+{% block content %}
 <h1>Expenses list</h1>
 
 <ul class="list-group">
@@ -12,3 +15,4 @@
 
 
 </ul>
+{% endblock content %}
