--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,13 +1,35 @@
 {% extends 'partials/base_auth.html' %}
 
 {% block content %}
-    
-    <div class="card">
-    
-    <div class="card-body">
-        <h1>Register</h1>
-    </div>
-    
-    </div>
+
+     <div class="row-col-md-4"></div>
+     <div class="row-col-md-4">
+     <div class="card mt-5">
+
+
+         <div class="card-body py-3" style="width: 30rem;">
+            <div class="card-title py-3 justify-content-center">
+             <h4>Register for a free account</h4>
+         </div>
+             <form action="" method="post">
+             <div class="form-group">
+                    <input type="text" name="username" placeholder="Username" class="form-control form-control-sm" id="usernamefield">
+                </div>
+                <div class="form-group">
+                    <input type="email" name="email" placeholder="Email" class="form-control form-select-sm" id="emailfield">
+                </div>
+                 <div class="form-group">
+                    <input type="password" name="password" placeholder="Password" class="form-control form-select-sm" id="passwordfield">
+                </div>
+                 <div class="d-grid"><input type="submit" value="Register" class="btn btn- btn-primary"></div>
+                 <small class="float-sm-end">SHOW</small>
+             </form>
+
+             </div>
+             </div>
+         </div>
+     </div>
+<div class="row-col-md-4"></div>
+</div>
     
 {% endblock content %}
