--- a/templates/partials/base_auth.html
+++ b/templates/partials/base_auth.html
@@ -19,23 +19,13 @@
 
 
 
-<div class="container-fluid">
-  <div class="row">
 
-    <main class="col-md-12"><div class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand"><div class=""></div></div><div class="chartjs-size-monitor-shrink"><div class="card"></div></div></div>
+    <main role="main">
 
-
-<div class="col-md-3">
-</div>
-
-<div class="col-md-6">
 
 {% block content %}
-{% endblock %}
-</div>
 
-<div class="col-md-3">
-</div>
+{% endblock %}
 
 
     </main>
