--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -1,5 +1,5 @@
 {% extends 'partials/base_auth.html' %}
-
+{% load static %}
 {% block content %}
 
      <div class="row-col-md-4"></div>
@@ -15,6 +15,8 @@
              <div class="form-group">
                     <input type="text" name="username" placeholder="Username" class="form-control form-control-sm" id="usernamefield">
                 </div>
+                 <div class="invalid-feedback invalid-feedback" style="display:none">
+                 </div>
                 <div class="form-group">
                     <input type="email" name="email" placeholder="Email" class="form-control form-select-sm" id="emailfield">
                 </div>
@@ -31,5 +33,6 @@
      </div>
 <div class="row-col-md-4"></div>
 </div>
+    <script src="{% static 'js/register.js' %}"></script>
     
 {% endblock content %}
