--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -17,9 +17,14 @@
                 </div>
                  <div class="invalid-feedback invalid-feedback" style="display:none">
                  </div>
+                 <p class="text-sm text-success usernameSuccessOutput"></p>
                 <div class="form-group">
-                    <input type="email" name="email" placeholder="Email" class="form-control form-select-sm" id="emailfield">
+                    <input type="email" name="email" placeholder="Email" class="form-control form-select-sm" id="emailField">
                 </div>
+
+                  <div class="emailfeedbackArea invalid-feedback" style="display:none">
+                 </div>
+
                  <div class="form-group">
                     <input type="password" name="password" placeholder="Password" class="form-control form-select-sm" id="passwordfield">
                 </div>
