js password toggle functionality

--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -29,7 +29,7 @@
                     <input type="password" name="password" placeholder="Password" class="form-control form-select-sm" id="passwordfield">
                 </div>
                  <div class="d-grid"><input type="submit" value="Register" class="btn btn- btn-primary"></div>
-                 <small class="float-sm-end">SHOW</small>
+                 <small class="float-sm-end ShowPasswordToggle">SHOW</small>
              </form>
 
              </div>
