messages Alert System

--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -11,7 +11,13 @@
             <div class="card-title py-3 justify-content-center">
              <h4>Register for a free account</h4>
          </div>
-             <form action="" method="post">
+
+
+
+
+             <form action="{% url 'register' %}" method="post">
+                 {% csrf_token %}
+                 {% include 'partials/_messages.html' %}
              <div class="form-group">
                     <input type="text" name="username" placeholder="Username" class="form-control form-control-sm" id="usernamefield">
                 </div>
