login & logout functionaities

--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -2,9 +2,11 @@
 
 
 {% block content %}
-<h1>Expenses list</h1>
 
-<ul class="list-group">
+    <div class="container">
+    {% include 'partials/_messages.html' %}
+        <h1>Expenses list</h1>
+    <ul class="list-group">
 
     <li class="list=group-item">Bought beer</li>
     <li class="list=group-item">Bought beer</li>
@@ -15,4 +17,9 @@
 
 
 </ul>
+
+    </div>
+
+
+
 {% endblock content %}
