--- a/templates/preferences/index.html
+++ b/templates/preferences/index.html
@@ -1,23 +1,31 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%} {% block content %}
 
-{% block content %}
 <div class="container mt-3">
- <h5>Preferred currency</h5>
+  <h5>Preferred Currency</h5>
+  {% include 'partials/_messages.html' %}
+  <form action="{% url 'preferences'%}" method="post">
+    {% csrf_token %}
+    <div class="input-group">
+      <select name="currency" class="custom-select" id="inputGroupSelect04">
+        {% if user_preferences.currency%}
+        <option name="currency" selected value="{{user_preferences.currency}}"
+          >{{user_preferences.currency}}</option
+        >
+        {% endif %} {% for currency in currencies %}
 
-<div class="input-group">
-  <select class="custom-select" id="inputGroupSelect04">
-      {% for item in currencies %}
-    <option selected>{{ item.name }} - {{ item.value }}</option>
-      {% endfor %}
+        <option name="currency" value="{{currency.name}} - {{currency.value}}"
+          >{{currency.name}} - {{currency.value}}
+        </option>
 
-  </select>
-  <div class="input-group-append">
-    <button class="btn btn-outline-secondary" type="button">Button</button>
-  </div>
-
-
+        {% endfor %}
+      </select>
+      <div class="input-group-append">
+        <input class="btn btn-outline-secondary" type="submit" value="Save" />
+      </div>
+    </div>
+  </form>
 </div>
-</div>
-    </hr>
+
+<hr />
 
 {% endblock %}
