--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -3,23 +3,20 @@
 
 {% block content %}
 
-    <div class="container">
-    {% include 'partials/_messages.html' %}
-        <h1>Expenses list</h1>
-    <ul class="list-group">
-
-    <li class="list=group-item">Bought beer</li>
-    <li class="list=group-item">Bought beer</li>
-    <li class="list=group-item">Bought beer</li>
-    <li class="list=group-item">Bought beer</li>
-    <li class="list=group-item">Bought beer</li>
-    <li class="list=group-item">Bought beer</li>
-
-
-</ul>
-
+    <div class="container mt-4">
+    <div class="row">
+        <div class="col-md-10">
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="">Expenses</a></li>
+    <li class="breadcrumb-item active" aria-current="page">My expenses</li>
+  </ol>
+</nav>
     </div>
+<div class="col col-md-2">
+    <a href="{% url 'add-expenses' %}" class="btn btn-primary">Add Expense</a>
 
-
-
-{% endblock content %}
+</div>
+</div>
+</div>
+{% include 'partials/_messages.html' %} {% endblock content %}
