--- a/templates/FinanceApp/add_expense.html
+++ b/templates/FinanceApp/add_expense.html
@@ -10,15 +10,19 @@
 </nav>
 
 <div class="card">
+
+
     <div class="card-body">
-        <form action="{% url 'expenses' %}" method="post">
+        <form action="{% url 'add-expenses' %}" method="post">
+        {% include 'partials/_messages.html' %}
+        {% csrf_token %}
         <div class="form-group">
             <label for="">Amount</label>
-            <input type="number" class="form-control form-control-sm" name="amount">
+            <input type="number" class="form-control form-control-sm" name="amount" value="{{values.amount}}">
         </div>
         <div class="form-group">
             <label for="">Description</label>
-            <input type="text" class="form-control form-control-sm" name="description">
+            <input type="text" class="form-control form-control-sm" name="description" value="{{values.description}}">
         </div>
         <div class="form-group">
             <label for="">Category</label>
