--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -18,5 +18,37 @@
 
 </div>
 </div>
+    <div class="container">
+    {% include 'partials/_messages.html' %}
+         {% if expenses.count %}
+
+
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        Amount (CURRENCY)
+                    </th>
+                    <th>Category</th>
+                    <th>Description</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+
+           {% for expense in expenses %}
+
+            <tr>
+                <td>{{ expense.amount}}</td>
+                <td>{{ expense.category }}</td>
+                <td>{{ expense.description }}</td>
+                <td>{{ expense.date}}</td>
+
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        {% endif %}
+    </div>
 </div>
-{% include 'partials/_messages.html' %} {% endblock content %}
+ {% endblock content %}
