--- a/templates/FinanceApp/edit_expense.html
+++ b/templates/FinanceApp/edit_expense.html
@@ -2,12 +2,23 @@
 {% block content %}
 <h1>Add expense</h1>
 <div class="container mt-4">
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{% url 'expenses' %}">Expenses</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Edit expense</li>
+    <div class="row">
+        <div class="col-md-10">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'expenses' %}">Expenses</a>
+                    </li>
+                        <li class="breadcrumb-item active" aria-current="page">
+                            Edit expense</li>
   </ol>
 </nav>
+
+    </div>
+    <div class="col-md-2">
+        <a href="{%  url 'expense-delete' expense.id %}" class="btn btn-danger btn-sm">Delete</a>
+    </div>
+</div>
 
 <div class="card">
     <div class="card-body">
