--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load static %}
 
 {% block content %}
 
@@ -22,7 +22,14 @@
     {% include 'partials/_messages.html' %}
          {% if expenses.count %}
 
-
+        <div class="row">
+            <div class="col-md-8"></div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="searchField" placeholder="Search">
+                </div>
+            </div>
+        </div>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -71,4 +78,5 @@
                 {% endif %}
                 </div>
                 </div>
+<script src="{% static 'js/searchexpenses.js' %}"></script>
                 {% endblock content %}
