--- a/templates/FinanceApp/edit_expense.html
+++ b/templates/FinanceApp/edit_expense.html
@@ -44,7 +44,7 @@
         </div>
         <div class="form-group">
             <label for="">Date of expense</label>
-            <input type="date" class="form-control form-control-sm" name="expense_date">
+            <input type="date" value="{{values.date |date:'Y-m-d' }}" class="form-control form-control-sm" name="expense_date">
         </div>
             <input type="submit" value="Save" class="btn btn-primary btn-primary-sm">
          </form>
