--- a/templates/base.html
+++ b/templates/base.html
@@ -22,15 +22,19 @@
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-  <div class="navbar-nav">
-    <div class="nav-item text-nowrap">
+
+  <ul class="navbar-nav" style="display: flex; flex-direction: row; align-items: center;">
+    <div class="nav-item text-nowrap mt-3" style="padding-right: 20px">
+        <a class="nav-link" href="">
+        ({{request.user.username}})
+        </a>
+
         <form action="{% url 'logout' %}" method="post">
             {% csrf_token %}
             <input class="text text-capitalize" type="submit" value="Sign out">
         </form>
     </div>
-  </div>
+  </ul>
 </header>
 
 <div class="container-fluid">
