--- a/templates/income/edit_income.html
+++ b/templates/income/edit_income.html
@@ -1,61 +1,83 @@
-{% extends "base.html" %}
-{% block content %}
-<h1>Add expense</h1>
+{% extends 'base.html' %} {% block content %}
+
 <div class="container mt-4">
-    <div class="row">
-        <div class="col-md-10">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                        <a href="{% url 'income' %}">Income</a>
-                    </li>
-                        <li class="breadcrumb-item active" aria-current="page">
-                            Edit Income</li>
-  </ol>
-</nav>
-
+  <div class="row">
+    <div class="col-md-10">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="{% url 'income'%}">Income</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">
+            Edit Income
+          </li>
+        </ol>
+      </nav>
     </div>
+
     <div class="col-md-2">
-        <a href="{%  url 'income-delete' income.id %}" class="btn btn-danger btn-sm">Delete</a>
+      <a
+        href="{% url 'income-delete' income.id %}"
+        class="btn btn-danger btn-sm"
+        >Delete</a
+      >
     </div>
-</div>
+  </div>
 
-<div class="card">
+  <div class="card">
     <div class="card-body">
-        <form action="{% url 'income-edit' income.id%}" method="post">
-        {% include 'partials/_messages.html' %}
-        {% csrf_token %}
+      <form action="{% url 'income-edit' income.id %}" method="post">
+        {% include 'partials/_messages.html'%} {% csrf_token %}
         <div class="form-group">
-            <label for="">Amount</label>
-            <input type="number" class="form-control form-control-sm" name="amount" value="{{values.amount}}">
+          <label for="">Amount</label>
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            name="amount"
+            value="{{values.amount}}"
+          />
         </div>
         <div class="form-group">
-            <label for="">Description</label>
-            <input type="text" class="form-control form-control-sm" name="description" value="{{values.description}}">
+          <label for="">Description</label>
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            name="description"
+            value="{{values.description}}"
+          />
         </div>
         <div class="form-group">
-            <label for="">Source</label>
-            <select class="form-control" name="category">
-                {% for source in sources %}
-                    <option selected name="category" value="{{values.source}}">{{ values.source }}</option>
-                <option name="source" value="{{source.name}}">{{ source.name }}</option>
-                {% endfor %}
-            </select>
+          <label for="">Source</label>
+          <select class="form-control" name="source">
+            <option selected name="source" value="{{values.source}}"
+              >{{values.source}}</option
+            >
+            {% for source in sources%}
+            <option name="source" value="{{source.name}}"
+              >{{source.name}}</option
+            >
+
+            {% endfor %}
+          </select>
         </div>
         <div class="form-group">
-            <label for="">Date of Income</label>
-            <input type="date" value="{{values.date | date:'Y-m-d' }}" class="form-control form-control-sm" name="income_date">
+          <label for="">Date of Income</label>
+          <input
+            type="date"
+            value="{{values.date | date:'Y-m-d' }}"
+            class="form-control form-control-sm"
+            name="income_date"
+          />
         </div>
-            <input type="submit" value="Save" class="btn btn-primary btn-primary-sm">
-         </form>
+
+        <input
+          type="submit"
+          value="Save"
+          class="btn btn-primary btn-primary-sm"
+        />
+      </form>
     </div>
-
+  </div>
 </div>
 
-
-
-
-</div>
-
-
-{% endblock content %}
+{% endblock %}
