setup for password reset functionality

--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -34,8 +34,10 @@
                  <small class="float-sm-end ShowPasswordToggle">SHOW</small>
              </form>
 
-             </div>
-             </div>
+             <div class="container">
+        <span class="text-lead lead">Have an account? </span><a href="{% url 'login' %}">Log in</a><br>
+        <span class="text-lead lead">Forgot password? </span><a href="{% url 'request-password' %}">Reset it</a>
+        </div>
          </div>
      </div>
 <div class="row-col-md-4"></div>
