--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -1,13 +1,36 @@
 {% extends 'partials/base_auth.html' %}
-
+{% load static %}
 {% block content %}
-    
-    <div class="card">
-    
-    <div class="card-body">
-        <h1>Register</h1>
-    </div>
-    
-    </div>
-    
+
+     <div class="row-col-md-4"></div>
+     <div class="row-col-md-4">
+     <div class="card mt-5">
+
+
+         <div class="card-body py-3" style="width: 30rem;">
+            <div class="card-title py-3 justify-content-center">
+             <h4>Please enter your email to get reset link</h4>
+         </div>
+             <form action="{% url 'request-password' %}" method="post">
+                 {% csrf_token %}
+                 {% include 'partials/_messages.html' %}
+
+                <div class="form-group">
+                    <input type="email" name="email" placeholder="Email" class="form-control form-select-sm" id="emailField" value="{{ values.email }}">
+                </div>
+
+                 <input type="submit" value="Submit" class="btn btn- btn-primary submit-btn"></div>
+                 <small class="float-sm-end ShowPasswordToggle">SHOW</small>
+             </form>
+
+             <div class="container">
+        <span class="text-lead lead">Have an account? </span><a href="{% url 'login' %}">Log in</a><br>
+        <span class="text-lead lead">Don't have an account? </span><a href="{% url 'register' %}">Sign up</a>
+        </div>
+         </div>
+     </div>
+<div class="row-col-md-4"></div>
+</div>
+    <script src="{% static 'js/register.js' %}"></script>
+
 {% endblock content %}
