--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,4 +1,4 @@
-{% extends 'base_auth.html' %}
+{% extends 'partials/base_auth.html' %}
 {% load static %}
 
 
@@ -39,8 +39,11 @@
           </div>
           <input type="submit" value="Login" class="btn btn-block btn-primary submit-btn" />
         </form>
-
-      </div>
+        </div>
+        <div class="container">
+        <span class="text-lead lead">Don't have an account? </span><a href="{% url 'register' %}">Register</a><br>
+        <span class="text-lead lead">Forgot password? </span><a href="{% url 'request-password' %}">Reset it</a>
+        </div>
 
       </div>
     </div>
