--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -2,13 +2,14 @@
 {% load static %}
 {% block content %}
 
-     <div class="row-col-md-4"></div>
-     <div class="row-col-md-4">
-     <div class="card mt-5">
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <div class="card mt-5">
 
 
-         <div class="card-body py-3" style="width: 30rem;">
-            <div class="card-title py-3 justify-content-center">
+      <div class="card-body">
+        <div class="card-title py-3">
              <h4>Please enter your email to get reset link</h4>
          </div>
              <form action="{% url 'request-password' %}" method="post">
