--- a/templates/authentication/set-new-password.html
+++ b/templates/authentication/set-new-password.html
@@ -1,13 +1,44 @@
 {% extends 'partials/base_auth.html' %}
-
+{% load static %}
 {% block content %}
-    
-    <div class="card">
-    
-    <div class="card-body">
-        <h1>Register</h1>
-    </div>
-    
-    </div>
-    
+
+<div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <div class="card mt-5">
+
+
+      <div class="card-body">
+        <div class="card-title py-3">
+             <h4>Set your new password</h4>
+         </div>
+             <form action="{% url 'reset-user-password' uidb64 token %}" method="post">
+                 {% csrf_token %}
+                 {% include 'partials/_messages.html' %}
+
+
+
+                 <div class="form-group">
+                    <input type="password" name="password" placeholder="Password" class="form-control form-select-sm" id="passwordfield">
+                <small class="float-sm-end ShowPasswordToggle">SHOW</small>
+                 </div>
+
+                 <div class="form-group">
+                    <input type="password" name="password2" placeholder="Confirm Password" class="form-control form-select-sm" id="passwordfield">
+                <small class="float-sm-end ShowPasswordToggle d-block">SHOW</small>
+                 </div>
+
+                 <div class="d-grid d-block p-3"><input type="submit" value="Submit" class="btn btn-block btn-primary submit-btn"></div>
+             </form>
+
+             <div class="container">
+        <span class="text-lead lead">Have an account? </span><a href="{% url 'login' %}">Log in</a><br>
+        <span class="text-lead lead">No account? </span><a href="{% url 'register' %}">Register</a>
+        </div>
+         </div>
+     </div>
+<div class="row-col-md-4"></div>
+</div>
+    <script src="{% static 'js/register.js' %}"></script>
+
 {% endblock content %}
