--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -28,8 +28,12 @@
     {% include 'partials/_messages.html' %} {% if expenses.count %}
 
     <div class="row">
-      <div class="col-md-8"></div>
+      <div class="col-md-8">
+
+      </div>
       <div class="col-md-4">
+
+          <a href="{% url 'export-csv' %}" class="btn btn-secondary">Export CSV</a>
 
         <div class="form-group">
           <input type="text" class="form-control" id="searchField" placeholder="Search">
