--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -32,8 +32,10 @@
 
       </div>
       <div class="col-md-4">
-
+          <a href="{% url 'export-excel' %}" class="btn btn-primary">Export Excel</a>
           <a href="{% url 'export-csv' %}" class="btn btn-secondary">Export CSV</a>
+
+
 
         <div class="form-group">
           <input type="text" class="form-control" id="searchField" placeholder="Search">
