--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -34,6 +34,7 @@
       <div class="col-md-4">
           <a href="{% url 'export-excel' %}" class="btn btn-primary">Export Excel</a>
           <a href="{% url 'export-csv' %}" class="btn btn-secondary">Export CSV</a>
+          <a href="{% url 'export-pdf' %}" class="btn btn-info">Export PDF</a>
 
 
 
