adiing charting to income summary page

--- a/templates/FinanceApp/index.html
+++ b/templates/FinanceApp/index.html
@@ -31,14 +31,14 @@
       <div class="col-md-8">
 
       </div>
-      <div class="col-md-4">
+      <div class="d-block col-md-4 justify-content-xl-center p-3">
           <a href="{% url 'export-excel' %}" class="btn btn-primary">Export Excel</a>
           <a href="{% url 'export-csv' %}" class="btn btn-secondary">Export CSV</a>
           <a href="{% url 'export-pdf' %}" class="btn btn-info">Export PDF</a>
 
 
 
-        <div class="form-group">
+        <div class="form-group p-2">
           <input type="text" class="form-control" id="searchField" placeholder="Search">
         </div>
       </div>
