--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -34,7 +34,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'income_stats' %}">
               Income Summary
             </a>
           </li>
